# azaks-conn

./: .pre-commit-config.yaml  LICENSE  README.md  TEMPLATE.md  pyproject.toml
.github/workflows/: release.yml
scripts/: bootstrap.sh
src/__PKG_NAME__/: __init__.py  __main__.py  cli.py  errors.py
src/azaks_conn/: __init__.py  __main__.py  aks.py  cli.py  config.py  errors.py  kubeconfig.py  kubectl.py
tests/: conftest.py  test_aks.py  test_cli.py  test_cli_connect.py  test_cli_phase3.py  test_cli_refresh.py  test_config.py  test_kubeconfig.py  test_kubectl.py
